Prevent edit panel overflow each time a message is displayed

--- a/src/components/gf3Edit/style/edit.less
+++ b/src/components/gf3Edit/style/edit.less
@@ -1,3 +1,7 @@
+#gf3-edit .panel-body {
+  max-height: 500px !important;
+}
+
 [gf3-edit] {
   hr {
     margin: 5px 0;
